2000-04-17  Chris Toshok  <toshok@helixcode.com>

	* message-list.c (message_list_init_renderers): no more
	e_cell_set_editable.  this info always comes from the model.

2000-04-14  Dan Winship  <danw@helixcode.com>

	* mail-format.[ch]: Moved from camel/camel-formatter, and changed
	slightly. (More to come.)

	* html-stream.[ch]: No longer necessary. mail-format uses
	GtkHTMLStreamHandles directly.

	* mail-display.[ch]: update for new message formatting code.

2000-04-14  Chris Toshok  <toshok@helixcode.com>

	* folder-browser-factory.c (control_activate): use
	gnome_app_fill_toolbar_with_data, so we get the beautiful gnome
	toolbar.

2000-04-14  Dan Winship  <danw@helixcode.com>

	* folder-browser-factory.c (development_warning): Fix up the
	warning message a bit.
	(folder_browser_factory): Make the warning bypassable.

2000-04-12  Miguel de Icaza  <miguel@gnu.org>

	* main.c (main): Call e_cursors_init.

2000-04-10  Dan Winship  <danw@helixcode.com>

	* mail-ops.c (fetch_mail): use camel_movemail when fetching mail
	from an mbox store. This leaves behind temp files for now,
	because CamelMboxFolder::delete is too confused to use, and NotZed
	is rewriting CamelMboxFolder, so I'm not going to bother to try to
	fix it.

	* mail-ops.c: Add some #includes for the non-HAVE_MKSTEMP case

2000-04-09  Matt Loper  <matt@helixcode.com>

	* folder-browser.c (folder_browser_new): set folder_browser->uri
	to NULL, so that we know when to free it.

2000-04-07  Miguel de Icaza  <miguel@gnu.org>

	* message-list.c (states_pixmaps): Add more beautiful art from
	Miggue, the Diego Rivera of the next millenium.
	(message_list_init_header): Use the beautiful art.

	* pixmaps: Miguel rediscovers the "transparent" concept.

2000-04-07  Matt Loper  <matt@helixcode.com>

	* folder-browser.c (folder_browser_destroy): Unref the shell
	interface that we have a handle to.

	* folder-browser-factory.c (control_destroy_cb): New function;